Fixed word overflow issue on shop page

--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,7 @@ textarea {
 ::placeholder {
   color: goldenrod;
 }
+
+td {
+  word-break: break-word !important;
+}
